# kamiyo-kani

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KANI.md  LICENSE  README.md  SECURITY.md
.cargo/: audit.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  benchmark.yml  ci.yml  coverage.yml  docs.yml  kani.yml
crates/kamiyo-kani/: Cargo.toml  LICENSE  README.md
crates/kamiyo-kani/src/: account_info.rs  bounds.rs  generators.rs  lib.rs  math.rs  risk.rs  staking.rs  token.rs
crates/kamiyo-kani/src/agent/: account.rs  bench.rs  cpi.rs  invariants.rs  mod.rs  pda.rs  replay.rs  state_machine.rs
crates/kamiyo-kani/tests/: account_info_verify.rs  agent_verify.rs  self_verify.rs
docs/: ADOPTION.md  BUG_CLASSES.md  FORK_GUIDE.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SKILLS.md  TRUST_MODEL.md  USER_GUIDE.md  production-audit-kani.md
examples/: README.md
examples/autonomous-payment-oracle-fixed/: Cargo.toml  README.md
examples/autonomous-payment-oracle-fixed/src/: lib.rs
examples/cpi-allowlist-fixed/: Cargo.toml  README.md
examples/cpi-allowlist-fixed/src/: lib.rs
examples/cpi-allowlist-vulnerable/: Cargo.toml  README.md
examples/escrow-release-policy-fixed/: Cargo.toml  README.md
examples/escrow-release-policy-vulnerable/: Cargo.toml  README.md
examples/fsm-transition-guard-fixed/: Cargo.toml  README.md
examples/fsm-transition-guard-vulnerable/: Cargo.toml  README.md
examples/oracle-quorum-median-fixed/: Cargo.toml  README.md
examples/oracle-quorum-median-vulnerable/: Cargo.toml  README.md
examples/pda-seed-bump-fixed/: Cargo.toml  README.md
examples/pda-seed-bump-vulnerable/: Cargo.toml  README.md
examples/replay-idempotency-fixed/: Cargo.toml  README.md
examples/replay-idempotency-vulnerable/: Cargo.toml  README.md
examples/signer-owner-authority-fixed/: Cargo.toml  README.md
examples/signer-owner-authority-vulnerable/: Cargo.toml  README.md
examples/x402-svm-agent-payments-fixed/: Cargo.toml  README.md
scripts/: benchmark-agent-flow.sh  check-trust-boundary.sh  kani-ci.sh  kani-sarif.py  kani.sh  skills-apply.sh
skills/: README.md  index.json
templates/anchor-invariants/: README.md
(+22 files in other folders)
