[package]
name = "kamiyo-kani"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Reusable Kani formal verification primitives for Solana program invariants"
repository = "https://github.com/kamiyo-ai/kamiyo-kani"
homepage = "https://github.com/kamiyo-ai/kamiyo-kani"
documentation = "https://kamiyo-ai.github.io/kamiyo-kani/kamiyo_kani/"
keywords = ["kani", "formal-verification", "solana", "proof", "invariant"]
categories = ["development-tools::testing"]
readme = "README.md"

[features]
default = []
kani-full = []
kani-stress = ["kani-full"]
solana-agent = []
solana-account-info = ["dep:solana-program"]

[dependencies]
solana-program = { version = "2.3.0", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
